sites/all/themes/pul_base/css/pul-base.styles.css
/* ... */
@media (min-width: 44em) {
  .l-region--footer nav, .l-region--footer #block-block-1 {
    -sgs-span-settings: ("span": 3, "location": 1, "grid": 12, "gutter": 0.66667, "style": "split", "start row": true, "end row": false, "fixed gutter": false, "split gutter": 1, "gutter property": "margin", "options": ((null: null)));
    width: 21.66667%;
    clear: right;
    float: left;
    margin-left: 1.66667%;
    margin-right: 1.66667%;
  }
}
.l-region--footer nav:first-child {
  margin-left: 0;
}
.l-region--footer .block--block-1 {
  margin-right: 0;
}

footer {
  background-color: #f5f4f1;
}
footer address, footer #university-copyright-footer {
  font-size: 0.75rem;
}
footer nav ul {
  display: none;
}
@media (min-width: 44em) {
  footer nav ul {
    display: block;
  }
}

.l-footer {
  margin: 2em 0;
}
.l-footer h2 {
  font-size: 16px;
  font-size: 1rem;
  line-height: 24px;
  line-height: 1.5rem;
  font-weight: bold;
  color: #7f3d00;
}
.l-footer .menu .leaf {
  list-style: none;
}
.l-footer .menu .leaf a {
  font-size: 0.75rem;
  color: #494f57;
}
.l-footer address {
  margin: .5em 0;
}

.view-clone-of-glossary .views-row {
  margin-bottom: 1em;
}

.summary-count {
  display: none;
}

.float-left {
  float: left;
}

span.icon-article-express--small-after {
  font-size: .75em;
}

span.icon-article-express--small-after:before {
  content: " ";
}

h1.icon-article-express--small-after:after {
  font-size: .75em;
}

.wrapper--navigation {
  background-color: #f5f4f1;
  border-bottom: 1px solid #ddd;
}

.l-content {
  clear: both;
}

.page-research-databases-search .pul_base_nine_three-region--first ul {
  margin-left: 0;
}

.pul_base_nine_three-region--second ul,
.three_six_three-region--first ul,
.menu .leaf,
.menu .collapsed,
.menu .expanded {
  list-style: none;
}

.three_six_three-region--middle ul,
.pul_base_nine_three-region--first ul,
.three_nine-region--second ul {
  list-style-type: disc;
  margin-left: 1.4em;
}
.three_six_three-region--middle ul li,
.pul_base_nine_three-region--first ul li,
.three_nine-region--second ul li {
  margin-bottom: 1em;
}

.three_six_three-region--middle ol,
.pul_base_nine_three-region--first ol,
.three_nine-region--second ol {
  list-style-type: decimal;
  margin-left: 1.4em;
}
.three_six_three-region--middle ol li,
.pul_base_nine_three-region--first ol li,
.three_nine-region--second ol li {
  margin-bottom: 1em;
}

.field--name-field-news-letter-volume,
.field--name-field-news-letter-issue {
  display: inline;
}

.field--name-field-news-letter-pdf {
  margin: 1em 0;
}

#renovation-news-block #renovation-news-lmg {
  overflow: hidden;
  *zoom: 1;
}
#renovation-news-block #renovation-news-lmg #renovation-news-lmg {
  display: inline-block;
}
#renovation-news-block #renovation-news-lmg p {
  margin-top: 0;
}
@media (min-width: 44em) {
  #renovation-news-block #renovation-news-lmg #renovation-news-lmg {
    float: left;
    width: 30%;
    margin-right: 1em;
  }
}
#renovation-news-block #read-more-renovation {
  display: none;
}

.section-collections-and-collection-development .three_six_three_stacked-region--top,
.section-collections-and-collection-development .single-region--top,
.section-collections-and-collection-development .nine_three_stacked-region--top,
.section-collections .three_six_three_stacked-region--top,
.section-collections .single-region--top,
.section-collections .nine_three_stacked-region--top {
  background-image: url(/sites/all/themes/pul_base/images/trustee_reading_room_50.png);
  background-position: center top;
  background-repeat: no-repeat;
  background-color: #212121;
}
.section-collections-and-collection-development .pane-spotlight-graphics-panel-pane-1,
.section-collections .pane-spotlight-graphics-panel-pane-1 {
  margin-top: 22.5px;
  clear: both;
  z-index: 1;
}

.front .wrapper--highlighted {
  background: rgba(142, 150, 160, 0.75);
  padding: 0;
  background-size: 1600px auto;
}
@media (min-width: 44em) {
  .front .wrapper--highlighted {
    background: linear-gradient(rgba(142, 150, 160, 0.75), rgba(142, 150, 160, 0.75)), url(../images/bg-test.jpg) center no-repeat;
  }
}
.front .wrapper--highlighted .l-region--highlighted {
  padding: 1em 0;
  position: relative;
}
@media (min-width: 44em) {
  .front .wrapper--highlighted .l-region--highlighted {
    padding: 4em 0;
  }
}

#block-views-spotlight-dispalsys-block {
  -sgs-span-settings: ("span": 12, "location": 1, "grid": 12, "gutter": 0.66667, "style": "split", "start row": true, "end row": true, "fixed gutter": false, "split gutter": 1, "gutter property": "margin", "options": ((null: null)));
  width: 96.66667%;
  float: right;
  margin-left: 0;
  margin-right: 1.66667%;
  clear: none;
  clear: both;
  display: none;
}
@media (min-width: 70em) {
  #block-views-spotlight-dispalsys-block {
    -sgs-span-settings: ("span": 3, "location": 10, "grid": 12, "gutter": 0.66667, "style": "split", "start row": false, "end row": true, "fixed gutter": false, "split gutter": 1, "gutter property": "margin", "options": ((null: null)));
    width: 21.66667%;
    float: right;
    margin-left: 0;
    margin-right: 1.66667%;
    clear: none;
    margin-left: 0;
    margin-right: 0;
    display: block;
  }
}

#block-views-spotlight-dispalsys-block {
  background: rgba(73, 79, 87, 0.65);
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  height: 159px;
  padding: 0;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
}
#block-views-spotlight-dispalsys-block h2 {
  display: none;
}
#block-views-spotlight-dispalsys-block a {
  font-size: 0.875rem;
  font-family: "Roboto", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0;
  color: white;
}
#block-views-spotlight-dispalsys-block img {
  width: 260px;
  height: 159px;
}
#block-views-spotlight-dispalsys-block .view-spotlight-dispalsys .views-row-1 {
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
}
/* ... */

